# Beryllium

./: .gitignore  .gitmodules  LICENSE  README.md
Beryllium/: Beryllium.sln  CMakeLists.txt  build.sh
Beryllium/Beryllium/: Beryllium.vcxproj  Beryllium.vcxproj.filters  SnakeEngine.cpp  SnakeEngine.h  engine.cpp  engine.h  gamemanager.cpp  gamemanager.h  imgui.ini  main.cpp
Beryllium/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
Beryllium/src/: button.h  constants.h  engine.cpp  engine.h  gamemanager.cpp  gamemanager.h  gamestate.cpp  gamestate.h  main.cpp  scoremanager.cpp  scoremanager.h  shader.h  soundbuffer.cpp  soundbuffer.h  sounddevice.cpp  sounddevice.h  soundmanager.cpp  soundmanager.h  soundsource.cpp  soundsource.h  stb_image.h  uimanager.cpp  uimanager.h
Documentation/: ecs_example.drawio
